# LiteOS-test

./: .gitignore  CMakeLists.txt  LiteOS.uvprojx  README.md  main.c
Application/: AT.c  AT.h  Alarm.c  Alarm.h  CMDSystem.c  CMDSystem.h  Callback.c  Callback.h  Clock.c  Clock.h  Operation.c  Operation.h  StopWatch.c  StopWatch.h  WaterFlow.c  WaterFlow.h  WorkStateFSM.c  WorkStateFSM.h
Config/: CMSIS_LOS.c  CMSIS_LOS.h  config.h
Drivers/: BSP_EEPROM.c  BSP_EEPROM.h  BSP_I2C.c  BSP_I2C.h  BSP_QEI.c  BSP_QEI.h  Beeper.c  Beeper.h  DigitalTube.c  DigitalTube.h  KeyScan.c  KeyScan.h  StepMotor.c  StepMotor.h  UART0.c  UART0.h  printf.c  printf.h
LiteOS/OS_CONFIG/: target_config.h
Multimedia/: Lib_songs.h  MusicAutoPlay.c  MusicAutoPlay.h  SoftTimer.c  SoftTimer.h
RTE/Device/TM4C1294NCPDT/: startup_TM4C129.s
RTE/_Target_1/: RTE_Components.h
